--- a/references.bib
+++ b/references.bib
@@ -271,7 +271,7 @@
 @article{lowe2004distinctive,
 	title={Distinctive image features from scale-invariant keypoints},
 	author={Lowe, David G},
-	journal={International journal of computer vision},
+	journal={International Journal of Computer Vision},
 	volume={60},
 	number={2},
 	pages={91--110},
@@ -282,7 +282,7 @@
 @inproceedings{philbin2007object,
 	title={Object retrieval with large vocabularies and fast spatial matching},
 	author={Philbin, James and Chum, Ondrej and Isard, Michael and Sivic, Josef and Zisserman, Andrew},
-	booktitle={2007 IEEE conference on computer vision and pattern recognition},
+	booktitle={2007 IEEE Conference on Computer Vision and Pattern Recognition},
 	pages={1--8},
 	year={2007},
 	organization={IEEE}
@@ -291,7 +291,7 @@
 @inproceedings{jegou2008hamming,
 	title={Hamming embedding and weak geometric consistency for large scale image search},
 	author={Jegou, Herve and Douze, Matthijs and Schmid, Cordelia},
-	booktitle={European conference on computer vision},
+	booktitle={European Conference on Computer Vision},
 	pages={304--317},
 	year={2008},
 	organization={Springer}
@@ -330,7 +330,7 @@
 @inproceedings{krizhevsky2012imagenet,
 	title={Imagenet classification with deep convolutional neural networks},
 	author={Krizhevsky, Alex and Sutskever, Ilya and Hinton, Geoffrey E},
-	booktitle={Advances in neural information processing systems},
+	booktitle={Advances in Neural Information Processing Systems},
 	pages={1097--1105},
 	year={2012}
 }
@@ -338,7 +338,7 @@
 @inproceedings{babenko2014neural,
 	title={Neural codes for image retrieval},
 	author={Babenko, Artem and Slesarev, Anton and Chigorin, Alexandr and Lempitsky, Victor},
-	booktitle={European conference on computer vision},
+	booktitle={European Conference on Computer Vision},
 	pages={584--599},
 	year={2014},
 	organization={Springer}
@@ -347,7 +347,7 @@
 @inproceedings{yue2015exploiting,
 	title={Exploiting local features from deep networks for image retrieval},
 	author={Yue-Hei Ng, Joe and Yang, Fan and Davis, Larry S},
-	booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition workshops},
+	booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition workshops},
 	pages={53--61},
 	year={2015}
 }
@@ -400,7 +400,7 @@
 @inproceedings{beyer1999nearest,
 	title={When is “nearest neighbor” meaningful?},
 	author={Beyer, Kevin and Goldstein, Jonathan and Ramakrishnan, Raghu and Shaft, Uri},
-	booktitle={International conference on database theory},
+	booktitle={International Conference on Database Theory},
 	pages={217--235},
 	year={1999},
 	organization={Springer}
